# claim-lifecycle-demo

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
archive/: run_demo.py
business_usecases/claim_lifecycle/finance_sox/: scenario_overview.md
claims/: claim-001.yaml  claim-002.yaml
demo_runner/: run_demo.py  run_kernel_showcase.py
evidence/: ev-001-proposed.yaml  ev-002-supported.yaml  ev-003-contradicted.yaml  ev-004-superseded.yaml
proposals/: proposal-001.yaml
rules/: transition-rules.yaml
transitions/: rejections-log.json  transition-log.json
