[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cricore-claim-lifecycle-demo"
version = "0.3.3"
description = "End-to-end governed claim lifecycle demonstration using the CRI-CORE enforcement kernel."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

authors = [
    { name = "Shawn C. Wright", email = "swright@waveframelabs.org" }
]

dependencies = [
    "cricore>=0.6.0"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.setuptools]
packages = []

[project.urls]
Homepage = "https://waveframelabs.org"
Repository = "https://github.com/Waveframe-Labs/claim-lifecycle-demo"